--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: Arial;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.left {
+  left: 0;
+  background-color: rgb(32, 21, 0);
+}
+
+.right {
+  right: 0;
+  background-color: skyblue;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+img{
+  width: 90%;
+  border: 5px solid rgb(32, 21, 0);
+}
+
+p {
+  font-size: 1.6rem;
+  margin: 4% 8%;
+  color: skyblue;
+  font-family:'Josefin Sans', sans-serif;
+  font-weight: 300;
+}
+
+h1 {
+  font-size: 3rem;
+  color: rgb(32, 21, 0);
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 2rem;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 700;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3{
+  font-size: 2rem;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 700;
+  color: white;
 }
